--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,20 +1,26 @@
-<h1>{{title}}</h1>
-<button (click)="alterarTexto()">Alterar</button>
+<h1>{{ title }}</h1>
 <ul>
+  <p *ngIf="todos.length == 0"><small>Nenhuma tarefa cadastrada</small></p>
   <li *ngFor="let todo of todos">
-    {{todo.id}}.
-    {{todo.title}}
-    - <button *ngIf="!todo.done" (click)="markAsDone(todo)">Concluir</button> |
-    - <button *ngIf="todo.done" (click)="markasUndone(todo)">Refazer</button> |
-    <button (click)="remove(todo)">Remover</button></li>
+    {{ todo.id }}.
+    {{ todo.title }}
+     <button *ngIf="!todo.done" (click)="markAsDone(todo)">Concluir</button>
+     <button *ngIf="todo.done" (click)="markasUndone(todo)">Refazer</button>
+    <button (click)="remove(todo)">Remover</button>
+  </li>
 </ul>
 <form [formGroup]="form">
   <fieldset>
     <label>Tarefa: </label>
-    <input type="text"
-    placeholder="Informe a tarefa"
-    maxlength="60"
-    formControlName="title">
-    <button>Salvar</button>
+    <input
+      type="text"
+      placeholder="Informe a tarefa"
+      maxlength="60"
+      formControlName="title"
+    />
+    <small *ngIf="form.controls.title.invalid && !form.controls.title.pristine"
+      >Este campo deve conter entre 3 e 60 carecteres</small
+    >
+    <button [disabled]="form.invalid" (click)="add()">Salvar</button>
   </fieldset>
 </form>
