--- a/todo/src/styles.css
+++ b/todo/src/styles.css
@@ -1,9 +1,9 @@
 body {
   height: 100vh;
   display: flex;
-  align-items:  center;
+  align-items: center;
   justify-content: center;
-  font-family: 'Montserrat',sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   text-align: center;
   background: #3023ae;
@@ -13,6 +13,41 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradiente(startColorstr='#3023ae', endColorstr='#c86dd7', GradientType=1);
 
 }
+
 button {
   cursor: pointer;
+}
+
+ul {
+  text-align: left;
+  margin: 10px;
+  padding: 10px;
+  list-style: none;
+  background: #fff;
+  border-radius: 10px;
+  -webkit-box-shadow: 3px 4px 14px 0px rgba(0, 0, 0, 0, 39);
+  -moz-box-shadow: 3px 4px 14px 0px rgba(0, 0, 0, 0, 39);
+  box-shadow: 3px 4px 14px 0px rgba(0, 0, 0, 0, 39);
+}
+
+li {
+  padding: 15px;
+  margin: 10px;
+  font-size: 1em;
+  font-style: italic;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+}
+
+li>button {
+  border: none;
+  background-color: #fff;
+  font-size: 1em;
+  float: right;
+  opacity: 0.6;
+  transition: opacity 1s;
+}
+
+li>button:hover {
+  opacity: 1;
+  transition: opacity 1s;
 }
