--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,25 +1,29 @@
-<h1>{{ title }}</h1>
-<ul>
+<h1 class="title animated jackInTheBox">{{ title }}</h1>
+<ul class="animated flipInX" *ngIf="mode=='list'">
   <p *ngIf="todos.length == 0"><small>Nenhuma tarefa cadastrada</small></p>
   <li *ngFor="let todo of todos">
     {{ todo.title }}
-     <button *ngIf="!todo.done" (click)="markAsDone(todo)">Concluir</button>
-     <button *ngIf="todo.done" (click)="markasUndone(todo)">Refazer</button>
+    <button *ngIf="!todo.done" (click)="markAsDone(todo)">Concluir</button>
+    <button *ngIf="todo.done" (click)="markasUndone(todo)">Refazer</button>
     <button (click)="remove(todo)">Remover</button>
   </li>
 </ul>
-<form [formGroup]="form">
-  <fieldset>
-    <label>Tarefa: </label>
-    <input
-      type="text"
-      placeholder="Informe a tarefa"
-      maxlength="60"
-      formControlName="title"
-    />
-    <small *ngIf="form.controls.title.invalid && !form.controls.title.pristine"
-      >Este campo deve conter entre 3 e 60 carecteres</small
-    >
-    <button [disabled]="form.invalid" (click)="add()">Salvar</button>
-  </fieldset>
-</form>
+<div id="modal" *ngIf="mode=='add'" class="animated flipInX">
+  <form [formGroup]="form">
+    <fieldset>
+      <label>Tarefa: </label>
+      <input type="text" placeholder="Informe a tarefa" maxlength="60" formControlName="title" />
+      <small *ngIf="form.controls.title.invalid && !form.controls.title.pristine">Este campo deve conter entre 3 e 60
+        carecteres</small>
+      <button class="button" [disabled]="form.invalid" (click)="add()">Salvar</button>
+    </fieldset>
+  </form>
+</div>
+<button class="add-button animated fadeInUp button" (click)="changeMode('add')" *ngIf="mode=='list'">
+  <i class="fas fa-plus-circle"></i>
+  Nova Tarefa
+</button>
+<button class="add-button animated fadeInUp button" (click)="changeMode('list')" *ngIf="mode=='add'">
+  <i class="fas fa-times"></i>
+  Cancelar
+</button>
